--- a/Api.DotNet.Infra.IoC/Api.DotNet.Infra.IoC.csproj
+++ b/Api.DotNet.Infra.IoC/Api.DotNet.Infra.IoC.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="11.0.0" />
-    <PackageReference Include="FluentValidation" Version="10.3.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Api.DotNet.Application\Api.DotNet.Application.csproj" />
+    <ProjectReference Include="..\Api.DotNet.App\Api.DotNet.App.csproj" />
     <ProjectReference Include="..\Api.DotNet.Domain\Api.DotNet.Domain.csproj" />
     <ProjectReference Include="..\Api.DotNet.Infra.Data\Api.DotNet.Infra.Data.csproj" />
   </ItemGroup>
